# Reaction-Wheels-Simulation

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  debug.sh  run.sh
config/: config.json
include/: Utilities.hpp  Vehicle.hpp
output/: states.csv
src/: Utilities.cpp  Vehicle.cpp  main.cpp
test/: CMakeLists.txt  ReactionWheelTest  build_gtest.sh  run_gtest.sh
test/unittests/: Utility_test.cpp
